--- a/.coveragerc
+++ b/.coveragerc
@@ -4,12 +4,12 @@ branch = 0
 omit =
     people/migrations/*
     people/tests/*
+    people/settings/*
 
 [report]
 exclude_lines =
     pragma: no cover
     def __repr__
-    def __unicode__
     raise AssertionError
     raise NotImplementedError
     if __name__ == .__main__.:
